# fastapi-admin

./: .gitignore  404.html  AGENT.md  AUTH_RBAC_SYSTEM.md  FORM_WIDGET_SYSTEM.md  PHASES.md  PLUGIN_SYSTEM.md  README.md  TAG_SPEC.md  alembic.ini  example.py  example_sqlmodel.py  fastapi_admin_core_spec.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  todo.md  ui_layout_component.md  ui_system_design.md  unfold_feature.md
.github/workflows/: publish.yml
.mimocode/plans/: 1781856241795-neon-squid.md  1781866118083-playful-wolf.md  1782721989012-kind-harbor.md  1782731212149-hidden-tiger.md  1782736848941-silent-engine.md  1782812845867-crisp-engine.md  1782893055962-quiet-eagle.md  1782899609497-sunny-forest.md  1782905006457-tidy-island.md  1782930620266-happy-garden.md
alembic/: env.py
alembic/versions/: 90756d9f5ed1_initial_migration.py  a1b2c3d4e5f6_add_security_tables.py
api/admin/: index.html
api/auth/: index.html
api/widgets/: index.html
contributing/: index.html
docs/: contributing.md  index.md
docs/api/: admin.md  auth.md  widgets.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: audit-logging.md  auth-rbac.md  model-registration.md  pagination.md  plugins.md  widgets-forms.md
fastapi_admin/: __init__.py  admin.py  cli.py  exceptions.py  field_types.py  modeladmin.py  nav.py  registry.py  router.py  types.py  views.py
fastapi_admin/actions/: __init__.py  base.py  registry.py
fastapi_admin/admin/: __init__.py  admin_config.py  admin_database.py  admin_router.py  admin_template.py  core.py  state.py
fastapi_admin/alembic/: env.py
fastapi_admin/api/: __init__.py  auth.py  crud.py  deps.py  roles.py  schemas.py
fastapi_admin/audit/: __init__.py  event_bus.py  events.py  listener.py  logger.py  middleware.py  models.py
fastapi_admin/auth/: __init__.py  backend.py  csrf.py  dependencies.py  identity.py  models.py  permissions.py  protocol.py  router.py  session.py  totp.py  views.py
fastapi_admin/config/: __init__.py  audit.py  auth.py  behavior.py  nav.py  theme.py  ui.py
fastapi_admin/filters/: base.py  registry.py
fastapi_admin/form/: pipeline.py
fastapi_admin/inspection/: __init__.py  registry.py
fastapi_admin/models/: __init__.py
fastapi_admin/nav/: __init__.py
fastapi_admin/registry/: core.py
fastapi_admin/storage/: __init__.py  local.py
fastapi_admin/templates/: base.html
fastapi_admin/views/: __init__.py  audit.py  bulk.py  class_views.py  context.py  dashboard.py  delete.py  factory.py  form.py  list.py  profile.py  renderers.py  roles.py  search.py  settings.py  totp.py  users.py
fastapi_admin/widgets/: __init__.py  base.py  inputs.py  registry.py  relation.py  resolver.py
fastapi_console/: __init__.py  admin.py  cli.py  db.py  exceptions.py  field_types.py  flash.py  inspection.py  modeladmin.py  nav.py  registry.py  router.py  types.py  validation.py  views.py
fastapi_console/actions/: __init__.py  registry.py
fastapi_console/admin/: __init__.py  admin_config.py  admin_database.py  admin_router.py  admin_template.py  builtin_models.py  core.py  decorators.py  state.py
fastapi_console/alembic/: env.py
fastapi_console/api/: __init__.py  auth.py  crud.py  deps.py  roles.py  schema_generator.py  schemas.py  search.py
fastapi_console/audit/: __init__.py  logger.py  (+6 more)
search/: search_index.json
templates/: base.html
tests/: conftest.py  test_2fa.py  test_admin.py  test_admin_components.py  test_admin_config.py  test_audit.py  test_auth.py  test_auth_routes.py  test_dashboard.py  test_inspection.py  test_inspector.py  test_jwt.py  test_models.py  test_nav.py  test_pagination.py  test_permissions.py  test_profile.py  test_registry.py  test_role_routes.py  test_routes.py  test_search.py  test_security.py  test_security_audit.py  test_session_security.py  test_shell_layout.py  test_storage.py  test_user_management.py  test_validator.py  test_view_factory.py  test_widget_resolver.py  test_widgets.py
upcoming-features/: index.html
(+135 files in other folders)
